[project]
name = "imc"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcele Elizabeth Aiache de Moraes",email = "marcele.panda@g.globo"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)"
]

[tool.poetry]
packages = [{include = "imc", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
